--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,51 @@
-/* You can add global styles to this file, and also import other style files */
+.text-center-custom {
+  text-align: center;
+}
+
+.container-fluid {
+  padding: 0px;
+  margin: 0px;
+}
+
+
+.button-middle {
+  padding-bottom: 0%;
+  padding-top: 11%;
+  padding-left: 3.2%;
+  padding-right: 3.2%;
+}
+
+.data-padding {
+  padding: 7%;
+  padding-top: 3%;
+  padding-bottom: 0px;
+}
+
+table {
+  margin-left: 30%;
+}
+
+td,
+th {
+  padding: 4px;
+}
+
+
+@media (max-width: 992px) {
+
+  .button-middle {
+      padding-bottom: 0px;
+      padding-top: 0px;
+      padding-left: 7.2% !important;
+      padding-right: 7.2% !important;
+  }
+
+  table {
+      margin-left: 20% !important;
+  }
+
+  .data-padding {
+      padding: 3% !important;
+      padding-bottom: 0px;
+  }
+}
